--- a/Sh1rga Chat Clip/app/chat/index.html
+++ b/Sh1rga Chat Clip/app/chat/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html id="html"><head>
 <meta charset="utf-8">
-<link rel="preconnect dns-prefetch" href="//chat.api-sh1r.ga">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src *">
 <title>Sh1rga Chat</title>
@@ -43,13 +42,13 @@ history.replaceState('','','?lang=' + getParam('lang') + '&protocol=' + "http");
 location.reload();}
 if (getParam('customserver') == null) {
   if (getParam('protocol') == "http") {
-	address_api = "http://chat.api-sh1r.ga";
+	address_api = "http://sh1rgapi.tsg0o0.com";
 	document.getElementById('box').innerHTML = "<br>Having connection problems?<br>Check your settings.";
   }else if (getParam('protocol') == "tor") {
-	address_api = "http://chat.api-sh1rga.tsg4o4zjaknpkbefs2k47a7emkl54moz2t2k4py4gbyhz6v7vubsjbad.onion";
+	address_api = "http://sh1rgapi.tsg4o4zjaknpkbefs2k47a7emkl54moz2t2k4py4gbyhz6v7vubsjbad.onion";
 	document.getElementById('box').innerHTML = "<br>Having connection problems?<br>Check your settings.";
   }else if (getParam('protocol') == "https") {
-	address_api = "https://chat.api-sh1r.ga";
+	address_api = "https://sh1rgapi.tsg0o0.com";
 	document.getElementById('box').innerHTML = "<br>Having connection problems?<br>Check your settings.";
   }else{
 	location.reload();
@@ -58,8 +57,8 @@ if (getParam('customserver') == null) {
   address_api = getParam('customserver');
   document.getElementById('box').innerHTML = "<br>Having connection problems?<br>Check your settings.";
 }
-var address_client = "https://chat.sh1r.ga";
-var address_web = "https://sh1r.ga";
+var address_client = "https://sh1rga.tsg0o0.com/chat/";
+var address_web = "https://sh1rga.tsg0o0.com";
 </script>
 <script src="socket.io/socket.io.js" defer></script>
 <script src="../jquery.js" defer></script>
